syntax = "proto3";

package ai.lzy.v1.channel;

import "ai/lzy/v1/common/slot.proto";

option java_outer_classname = "LCMS";
option java_package = "ai.lzy.v1.channel";

service LzyChannelManager {
  rpc Bind (BindRequest) returns (BindResponse);
  rpc Unbind (UnbindRequest) returns (UnbindResponse);
}

message BindRequest {
  SlotInstance slotInstance = 1;
}

message BindResponse {}

message UnbindRequest {
  SlotInstance slotInstance = 1;
}

message UnbindResponse {}
